# adapter-satori

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug.md  bug_report.yml  feature.md  feature_request.yml
.github/workflows/: test.yml
nonebot/adapters/satori/: adapter.py  bot.py  compat.py  config.py  element.py  event.py  exception.py  message.py  models.py  utils.py
tests/: conftest.py  fake_server.py  test_adapter.py  test_connection.py  test_message.py
