[project]
name = "nonebot-adapter-satori"
version = "0.6.3"
description = "Satori Protocol Adapter for Nonebot2"
authors = [
    {name = "RF-Tar-Railt",email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "nonebot2>=2.1.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/nonebot/adapter-satori"
repository = "https://github.com/nonebot/adapter-satori"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.9.1",
    "ruff>=0.0.292",
    "pre-commit>=3.4.0",
    "nonebot2[httpx,websockets]>=2.1.1",
]

[tool.pdm.build]
includes = ["nonebot"]

[tool.black]
line-length = 110
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 110
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "UP037"]

line-length = 110
target-version = "py38"

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.8"
