[project]
name = "nonebot-adapter-satori"
version = "0.13.8"
description = "Satori Protocol Adapter for Nonebot2"
authors = [
    {name = "RF-Tar-Railt",email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "nonebot2>=2.4.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/nonebot/adapter-satori"
repository = "https://github.com/nonebot/adapter-satori"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.13.2",
    "black>=24.1.1",
    "ruff>=0.2.1",
    "pre-commit>=3.5.0",
    "nonebot2[httpx,websockets]>=2.4.2",
    "pydantic>=2.7.4",
]
test = [
    "nonebug>=0.3.5",
    "pytest-asyncio>=0.23.5",
    "pytest-xdist>=3.5.0",
    "wsproto>=1.2.0",
    "werkzeug>=3.0.1",
]

[tool.pdm.build]
includes = ["nonebot"]

[tool.pdm.scripts]
test = "pytest -W ignore -s"
format = { composite = ["isort ./","black ./","ruff check ./"] }


[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]

line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "UP037", "W291"]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.9"
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true
defineConstant = { PYDANTIC_V2 = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
